Add caching and  basic filtering

--- a/src/scss/partials/_variables.scss
+++ b/src/scss/partials/_variables.scss
@@ -1,3 +1,7 @@
-$primary: #245dd6;
+$primary: #215dd6;
 $font-family-sans-serif: "Open Sans", sans-serif;
 $headings-font-family: "Quicksand", sans-serif;
+$enable-gradients: false;
+$enable-shadows: false;
+
+$body-color: $gray-600;
