--- a/src/scss/partials/_base.scss
+++ b/src/scss/partials/_base.scss
@@ -1,3 +1,18 @@
 .main {
-  min-height: 100vh;
+  min-height: 66vh;
+}
+
+.partners {
+  margin-bottom: 80px;
+}
+
+.partners img {
+  width: 70%;
+  height: auto;
+}
+
+.page-title {
+  color: #3b6fd8;
+  text-transform: uppercase;
+  font-size: 32px;
 }
