--- a/src/scss/partials/_variables.scss
+++ b/src/scss/partials/_variables.scss
@@ -3,5 +3,5 @@ $font-family-sans-serif: "Open Sans", sans-serif;
 $headings-font-family: "Quicksand", sans-serif;
 $enable-gradients: false;
 $enable-shadows: false;
-
+$nav-link-font-size: 18px;
 $body-color: $gray-600;
