--- a/src/scss/partials/_variables.scss
+++ b/src/scss/partials/_variables.scss
@@ -1,6 +1,7 @@
 $primary: #215dd6;
 $font-family-sans-serif: "Open Sans", sans-serif;
 $headings-font-family: "Quicksand", sans-serif;
+$headings-color: $primary;
 $enable-gradients: false;
 $enable-shadows: false;
 $nav-link-font-size: 18px;
