Working on homepage

--- a/src/scss/partials/_base.scss
+++ b/src/scss/partials/_base.scss
@@ -1,3 +1,27 @@
+@each $num_columns, $apply in $responsive_text_columns {
+  .text-columns-#{$num_columns} {
+      -webkit-column-count: 1;
+      -moz-column-count: 1;
+      column-count: 1;
+      -webkit-column-gap: 0em;
+      -moz-column-gap: 0em;
+      column-gap: 0em;
+  }
+  @each $scale in ("sm", "md", "lg", "xl")
+  {
+      @include media-breakpoint-up($scale) {
+          .text-columns-#{$num_columns} {
+              -webkit-column-count: map-get(map-get($apply , $scale ), "cols");
+              -moz-column-count: map-get(map-get($apply , $scale ), "cols");
+              column-count: map-get(map-get($apply , $scale ), "cols");
+              -webkit-column-gap: map-get(map-get($apply , $scale ), "gutter");
+              -moz-column-gap: map-get(map-get($apply , $scale ), "gutter");
+              column-gap: map-get(map-get($apply , $scale ), "gutter");
+          }
+      }
+  }
+}
+
 .main {
   min-height: 66vh;
 }
@@ -15,4 +39,9 @@
   color: #3b6fd8;
   text-transform: uppercase;
   font-size: 32px;
+}
+
+.break {
+  background: blue;
+  width: 100%;
 }
