--- a/src/scss/partials/_home.scss
+++ b/src/scss/partials/_home.scss
@@ -19,6 +19,6 @@
   button.nav-link:hover,
   button.nav-link.active {
     border: none;
-    background: $light;
+    background-color: #e4e4e4;
   }
 }
