--- a/src/scss/partials/_story.scss
+++ b/src/scss/partials/_story.scss
@@ -4,6 +4,7 @@
   background-position: center !important;
   background-size: contain !important;
 }
+
 .story-info {
   td {
     vertical-align: top;
@@ -17,6 +18,25 @@
   }
 }
 
+#stories-swiper {
+  height: 142px;
+
+  .swiper-slide {
+    width: auto;
+    user-select: none;
+    img {
+      object-fit: contain;
+      max-width:100%;
+      max-height: 100%;
+    }
+
+    &-active {
+      padding: 5px;
+      border:2px solid $primary;
+    }
+  }
+}
+
 .thumbs-swiper {
   height: 142px;
   box-sizing: border-box;
@@ -25,6 +45,7 @@
   .swiper-slide {
     opacity: 0.4;
     height: 100%;
+    border: 1px solid #ccc;
     background-size: contain;
     background-repeat: no-repeat;
     background-color: #ccc;
@@ -33,5 +54,17 @@
 
   .swiper-slide-thumb-active {
     opacity: 1;
+    border-bottom: 2px solid $primary;
+  }
+}
+
+.stories-swiper-wrapper {
+  position: relative;
+  .swiper-button-prev {
+    left: -32px;
+  }
+
+  .swiper-button-next {
+    right: -32px;
   }
 }
