Temporary removing thumbnails slider

--- a/src/scss/partials/_story.scss
+++ b/src/scss/partials/_story.scss
@@ -62,9 +62,11 @@
   position: relative;
   .swiper-button-prev {
     left: -32px;
+    top: 20px;
   }
 
   .swiper-button-next {
     right: -32px;
+    top: 20px;
   }
 }
