Adding exhibition detail

--- a/src/scss/partials/_exhibition.scss
+++ b/src/scss/partials/_exhibition.scss
@@ -2,9 +2,33 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
 }
+
 .exhibition-tile {
   padding: 60px;
   align-self: center;
   justify-self: center;
-  
+
+  a {
+    text-decoration: none;
+    color: $body-color;
+  }
+}
+
+#exhibitions-swiper {
+  height: 120px;
+
+  .swiper-slide {
+    width: auto;
+    user-select: none;
+    img {
+      object-fit: contain;
+      max-width:100%;
+      max-height: 100%;
+    }
+
+    &-active {
+      padding: 5px;
+      border:2px solid $primary;
+    }
+  }
 }
