Fix exhibition detail header

--- a/src/scss/partials/_exhibition.scss
+++ b/src/scss/partials/_exhibition.scss
@@ -32,3 +32,14 @@
     }
   }
 }
+
+.exhibitions-swiper-wrapper {
+  position: relative;
+  .swiper-button-prev {
+    left: -32px;
+  }
+
+  .swiper-button-next {
+    right: -32px;
+  }
+}
