--- a/src/scss/partials/_story.scss
+++ b/src/scss/partials/_story.scss
@@ -40,13 +40,13 @@
 }
 
 .thumbs-swiper {
-  height: 142px;
   box-sizing: border-box;
   padding: 10px 0;
 
   .swiper-slide {
+    width: auto;
     opacity: 0.4;
-    height: 100%;
+    // height: 100%;
     border: 1px solid #ccc;
     background-size: contain;
     background-repeat: no-repeat;
@@ -56,7 +56,7 @@
 
   .swiper-slide-thumb-active {
     opacity: 1;
-    border-bottom: 2px solid $primary;
+    border-bottom: 4px solid $primary;
   }
 }
 
